# smarteam_com

./: CMakeLists.txt  main.cpp
smarteam/: constants.h  helper.cpp  helper.h
smarteam/data/: data_helper.cpp  data_helper.h
smarteam/data/providers/: database_provider.cpp  database_provider.h  engine_provider.cpp  engine_provider.h  session_provider.cpp  session_provider.h  smarteam_provider.cpp  smarteam_provider.h
